# gpu-lol

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/gpu-lol-add-gpu/: SKILL.md
.claude/skills/gpu-lol-debug/: SKILL.md
.claude/skills/gpu-lol-down/: SKILL.md
.claude/skills/gpu-lol-install/: SKILL.md
.claude/skills/gpu-lol-llm/: SKILL.md
.claude/skills/gpu-lol-logs/: SKILL.md
.claude/skills/gpu-lol-resume/: SKILL.md
.claude/skills/gpu-lol-secrets/: SKILL.md
.claude/skills/gpu-lol-snapshot/: SKILL.md
.claude/skills/gpu-lol-test/: SKILL.md
.claude/skills/gpu-lol-up/: SKILL.md
.claude/skills/gpu-lol-validate/: SKILL.md
docs/: architecture.md  contributing.md  providers.md
gpu_lol/: __init__.py  analyzer.py  cli.py  config.py  llm.py  runpod_api.py  skypilot.py  snapshot.py  validator.py
tests/: test_analyzer.py  test_skypilot.py  test_validator.py
tests/fixtures/llama-finetune/: requirements.txt  train.py
tests/fixtures/pytorch-training/: requirements.txt
tests/fixtures/vllm-inference/: requirements.txt
